BANG-1351: Adjust the mapping rules table to display number of grants.
