# docs/api/openapi3.json
@@ -446,6 +446,39 @@
           }
         }
       },
+      "ListMappingRuleGrantsResponse": {
+        "properties": {
+          "count": {
+            "description": "Total number of grants",
+            "example": "10",
+            "format": "int",
+            "type": "integer"
+          },
+          "items": {
+            "items": {
+              "properties": {
+                "id": {
+                  "example": "4yJ3n3D8E2",
+                  "format": "uid",
+                  "pattern": "[1-9a-km-zA-HJ-NP-Z]{1,11}",
+                  "type": "string"
+                },
+                "privilege": {
+                  "type": "string"
+                },
+                "resource": {
+                  "type": "string"
+                },
+                "subject": {
+                  "type": "string"
+                }
+              },
+              "type": "object"
+            },
+            "type": "array"
+          }
+        }
+      },
       "ListResponse_AccessKey": {
         "properties": {
           "count": {
@@ -872,6 +905,10 @@
                 "destination_type": {
                   "type": "string"
                 },
+                "grantsCount": {
+                  "format": "int",
+                  "type": "integer"
+                },
                 "id": {
                   "example": "4yJ3n3D8E2",
                   "format": "uid",
@@ -1268,6 +1305,10 @@
           },
           "destination_type": {
             "type": "string"
+          },
+          "grantsCount": {
+            "format": "int",
+            "type": "integer"
           },
           "id": {
             "example": "4yJ3n3D8E2",
@@ -5860,6 +5901,113 @@
         "summary": "UpdateMappingRule",
         "tags": [
           "Misc"
+        ]
+      }
+    },
+    "/api/mapping-rules/{id}/grants": {
+      "get": {
+        "description": "GetMappingRuleGrants",
+        "operationId": "GetMappingRuleGrants",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Infra-Version",
+            "required": true,
+            "schema": {
+              "description": "Version of the API being requested",
+              "example": "0.0.0",
+              "format": "\\d+\\.\\d+\\(.\\d+)?(-.\\w(+\\w)?)?",
+              "type": "string"
+            }
+          },
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "schema": {
+              "description": "Bearer followed by your access key",
+              "example": "Bearer ACCESSKEY",
+              "format": "Bearer [\\da-zA-Z]{10}\\.[\\da-zA-Z]{24}",
+              "type": "string"
+            }
+          },
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "example": "4yJ3n3D8E2",
+              "format": "uid",
+              "pattern": "[1-9a-km-zA-HJ-NP-Z]{1,11}",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "Bad Request"
+          },
+          "401": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "Unauthorized: Requestor is not authenticated"
+          },
+          "403": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "Forbidden: Requestor does not have the right permissions"
+          },
+          "404": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "Not Found"
+          },
+          "409": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "Duplicate Record"
+          },
+          "default": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ListMappingRuleGrantsResponse"
+                }
+              }
+            },
+            "description": "Success"
+          }
+        },
+        "summary": "GetMappingRuleGrants",
+        "tags": [
+          "Grants"
         ]
       }
     },
